Refactor Contact page to simulate terminal interaction; implement command handling and enhance UI with terminal aesthetics. Update styles across various components for a cohesive look and feel. Revamp Projects and Skills sections to align with terminal theme, including new animations and layout adjustments.

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+section {
+  padding-top: 70px; 
+}
+
 html, body {
   height: 100%;
   width: 100%;
@@ -77,7 +81,7 @@ body {
 
 @media (max-width: 768px) {
   .main-container {
-    scroll-snap-type: none; /* mobile friendliness */
+    scroll-snap-type: none;
   }
 
   body {
